--- a/about.html
+++ b/about.html
@@ -10,8 +10,8 @@
     <a href="about.html">About Me</a>
     <a href="vocab.html">Vocabulary</a>
     <h1>This is my about me page!</h1>
-    <img src="/images/music.png" height="250"\>
-    <img src="/images/computer.png" height="150"
+    <img src="images/music.png" height="250"\>
+    <img src="images/computer.png" height="150"
     <br>
     <h2>Hobbies and Interests!</h2>
     <ul>
