--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <a href="about.html">About Me</a>
     <a href="vocab.html">Vocabulary</a>
     <h1>This is my test Home Page!</h1>
-    <img src="/images/home.jpg" height="250">
+    <img src="images/home.jpg" height="250">
   </body>
 </html>
