--- a/portfolio.html
+++ b/portfolio.html
@@ -10,14 +10,14 @@
     <a href="about.html">About Me</a>
     <a href="vocab.html">Vocabulary</a>
     <h1>This is my Portfolio Page!</h1>
-    <img src="/images/portfolio.jpg" height="250">
+    <img src="images/portfolio.jpg" height="250">
     <br>
     <a target="_blank" href="https://scratch.mit.edu/users/XperiencedLutz/">
-      <img src="/images/scratchlogo2.png" height="75"></a>
+      <img src="images/scratchlogo2.png" height="75"></a>
     <a target="_blank" href="https://scratch.mit.edu/users/Im_4nthony/">
-      <img src="/images/scratchlogo1.png" height="75"></a>
+      <img src="images/scratchlogo1.png" height="75"></a>
       <br></br>
-      <img src="/images/Scratch Remix.PNG" height="900"></a>
+      <img src="images/Scratch Remix.PNG" height="900"></a>
 
       
 	  </body>
